# sunona

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements.txt  stars_history.json
.github/: PULL_REQUEST_TEMPLATE.md  STAR_TRACKING_README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml  update-stars.yml
agent_data/example_recruiter/: config.json  config_minimal.json  conversation_details.json  users.json
demo/: .env.example  .gitignore  Dockerfile  README.md  gradio_app.py  hands_free_assistant.py  railway.json  render.yaml  requirements.txt  speech_to_speech.py  text_to_speech.py  text_to_text.py  twilio_backend.py  twilio_trial_test.py
docs/: API_TESTING_GUIDE.md  PROVIDER_REFERENCE.md  README.md  TWILIO_SETUP.md
examples/: README.md  TWILIO_QUICKSTART.md  backup_simpleassistant.py  bandwidth_call_server.py  domain_expert.py  plivo_call_server.py  simple_assistant.py  telnyx_call_server.py  test_llm.py  test_rag.py  text_only_assistant.py  twilio_call_server.py  voice_assistant.py  vonage_call_server.py
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml
local_setup/: .env.example  Dockerfile  Dockerfile.bandwidth  Dockerfile.plivo  Dockerfile.telnyx  Dockerfile.twilio  Dockerfile.vonage  README.md  build-all.bat  build-app.bat  build-twilio.bat  build.bat  build.sh  docker-compose.yml  init-db.sql  prometheus.yml  pull-images.bat  start.bat  start.sh
resources/api/: sunona-api-collection.json
scripts/: README.md  create_agent.bat  create_agent.sh  make_call.bat  make_call.sh  test_api.bat  test_api.sh  update_stars.py  view_agent.bat  view_agent.sh
sunona/: __init__.py  assistant.py  constants.py  models.py  providers.py  server.py
sunona-website/: package.json
sunona/accounts/: __init__.py  manager.py  models.py
sunona/agent_manager/: __init__.py  assistant_manager.py  base_manager.py  task_manager.py
sunona/agents/: __init__.py  agent_selector.py  base_agent.py  contextual_conversational_agent.py  extraction_agent.py  graph_agent.py  (+4 more)
tests/: __init__.py  conftest.py
(+221 files in other folders)
