# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunona"
version = "0.2.0"
description = "Enterprise-Grade Voice AI Platform - Build production-ready conversational assistants"
readme = "README.md"
authors = [
    { name = "Pawar Sathyanarayana", email = "sathyaedu1119@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = [
    "voice-ai", "conversational-ai", "speech-to-text", "text-to-speech",
    "llm", "telephony", "twilio", "voice-assistant", "ai-agent",
    "deepgram", "elevenlabs", "openai", "rag", "knowledge-base"
]
dynamic = ["dependencies"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Sunona-AI-labs/sunona"
Repository = "https://github.com/Sunona-AI-labs/sunona"
Documentation = "https://github.com/Sunona-AI-labs/sunona#readme"
"Bug Tracker" = "https://github.com/Sunona-AI-labs/sunona/issues"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pytest-asyncio", "black", "ruff"]
aws = ["boto3>=1.34.0"]
azure = ["azure-cognitiveservices-speech>=1.30.0"]
google = ["google-cloud-speech>=2.21.0"]
telephony-extra = [
    "signalwire>=1.4.0",
    "telnyx>=2.1.0",
]
all-providers = [
    "boto3>=1.34.0",
    "azure-cognitiveservices-speech>=1.30.0",
    "google-cloud-speech>=2.21.0",
    "signalwire>=1.4.0",
    "telnyx>=2.1.0",
]

[tool.setuptools]
package-dir = {"sunona" = "sunona"}

[tool.setuptools.packages.find]
where = ["."]
include = ["sunona*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
